--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
+* {
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(73, 9, 121, 0.8855742125951943) 0%,
+    rgba(244, 0, 255, 1) 100%,
+    rgba(3, 153, 216, 1) 100%
+  );
+}
+button {
+  border: none;
+  outline: none;
+  border-radius: 0.2em;
+  cursor: pointer;
+}
+input {
+  border: 1px solid #ccc;
+  outline: none;
+}
+.hidden {
+  display: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+
