--- a/src/Styles/PokemonesList.css
+++ b/src/Styles/PokemonesList.css
@@ -45,7 +45,7 @@
 }
 /***********card pokemones*****/
 
-.pokemones_grid{
+.pokemon{
     padding-top: 8em;
     display: grid;
     place-items: center;
@@ -53,18 +53,18 @@
     row-gap: 3em;
     padding-bottom: 2em;
 }
-.pokemon_card{
-    border: 1px solid #ccc;
+.pokemon__card{
     border-radius: 5px;
     text-align: center;
     padding: .5em;
     color: var(--color-white);
+    box-shadow: 0 0 5px #ccc;
 }
-.pokemon_card img{
+.pokemon__img{
     height: 180px;
     width: 200px;
 }
-.btn_captured{
+.pokemon__btn{
     width: 100%;
     padding: .7em;
     color: var(--color-white);
@@ -73,12 +73,16 @@
     border-radius: 3px;
     cursor: pointer;
 }
+.pokemon__btn--warning{
+    background-color: rgb(252, 213, 38);
+    color: #222;
+}
 /****************/
 .title_favoritos{
     text-align: center;
     color: var(--color-white);
 }
-.btn_delete {
+.pokemon__btnDelete {
     background-color: #d60040;
     width: 100%;
     padding: 0.7em 1.5em;
