--- a/src/Styles/FormsLogin.css
+++ b/src/Styles/FormsLogin.css
@@ -10,7 +10,7 @@
     margin-bottom: 1.5em;
     border-radius: 5px;
 }
-.form .btn{
+ .btn{
     padding: .7em ;
     width: 100%;
     margin-bottom: 1.5em;
