--- a/src/Styles/PokemonesList.css
+++ b/src/Styles/PokemonesList.css
@@ -46,11 +46,11 @@
 /***********card pokemones*****/
 
 .pokemon{
-    padding-top: 8em;
+    padding-top: 10em;
     display: grid;
     place-items: center;
     grid-template-columns: repeat(auto-fill,minmax(15rem,1fr));
-    row-gap: 3em;
+    row-gap: 5em;
     padding-bottom: 2em;
 }
 .pokemon__card{
@@ -63,6 +63,7 @@
 .pokemon__img{
     height: 180px;
     width: 200px;
+    margin-top: -4em;
 }
 .pokemon__btn{
     width: 100%;
